adding a dropdown feature to smarthome & lifestyle nav bar menu - Clear

--- a/public/app.html
+++ b/public/app.html
@@ -63,98 +63,130 @@
                   </li>
 <!-- ===== Smartphone Nav ===== -->
                   <li id="smartphone-nav">
-                    <a id="smartphone-nav-a"  href="#" class="flex justify-between items-center py-2 lg:justify-center"><P class="font-bold">Smartphone</P><span id="smartphone-nav-simbol" class="material-symbols-outlined text-black lg:hidden">
-                      add
-                      </span>
+                    <a id="smartphone-nav-a"  href="#" class="flex justify-between items-center py-2 lg:justify-center">
+                      <P class="font-bold">Smartphone</P>
+                      <span id="smartphone-nav-symbol" class="material-symbols-outlined text-black lg:hidden">add</span>
                     </a>
 <!-- ======= Dropdown Smartphone ========= -->
                     <div id="dropdown-smartphone-nav-content" class="bg-gray-100 w-full my-2 py-2 px-6 divide-y hidden divide-gray-300 rounded-lg" >
                       <ul class="grid grid-cols-4">
-                        <li class=""><a href="#" class=" flex justify-center items-center py-6"><p>Redmi</p></a></li>
-                        <li><a href="#" class=" flex justify-center items-center py-6"><p>POCO</p></a></li>
-                        <li><a href="#" class=" flex justify-center items-center py-6"><p>Xiaomi</p></a></li>
+                        <li class="">
+                          <a href="#" class=" flex justify-center items-center py-6">
+                            <p>Redmi</p>
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#" class=" flex justify-center items-center py-6">
+                            <p>POCO</p>
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#" class=" flex justify-center items-center py-6">
+                            <p>Xiaomi</p>
+                          </a>
+                        </li>
                       </ul>
-                      <div class="flex justify-center items-center"><a href="#" class="flex py-2"><p>Semua Produk</p><span class="material-symbols-outlined">
-                        chevron_right
-                        </span></a>
+                      <div class="flex justify-center items-center">
+                        <a href="#" class="flex py-2">
+                          <p>Semua Produk</p>
+                          <span class="material-symbols-outlined">chevron_right</span></a>
                       </div>
                     </div>
                   </li>
 <!-- ===== Smart Home Nav ===== -->
-                  <li>
-                    <a href="#" class="flex justify-between items-center py-2 focus:text-orange-500 lg:justify-center"><P class="font-bold">Smart Home</P><span class="material-symbols-outlined lg:hidden">
-                      add
-                      </span></a>
+                  <li id="smarthome-nav">
+                    <a id="smarthome-nav-a" href="#" class="flex justify-between items-center py-2 lg:justify-center">
+                      <P class="font-bold">Smart Home</P>
+                      <span id="smarthome-nav-symbol" class="material-symbols-outlined text-black lg:hidden">add</span>
+                    </a>
 <!-- ======= Dropdown SmartHome ===== -->
-                      <div class="bg-gray-100 w-full my-2 py-2 px-6 divide-y hidden divide-gray-300 rounded-lg">
+                      <div id="smarthome-dropdown-nav" class="bg-gray-100 w-full my-2 py-2 px-6 divide-y hidden divide-gray-300 rounded-lg">
                         <ul class="grid grid-cols-3">
-                          <li><a href="#" class="flex flex-col gap-2 py-4 justify-center items-center"><span class="material-symbols-outlined rotate-90">
-                            tablet_mac
-                            </span><p class="text-xs">Pad</p></a>
+                          <li>
+                            <a href="#" class="flex flex-col gap-2 py-4 justify-center items-center">
+                              <span class="material-symbols-outlined rotate-90">tablet_mac</span>
+                              <p class="text-xs">Pad</p>
+                            </a>
                           </li>
-                          <li><a href="#" class="flex flex-col gap-2 py-4 justify-center items-center"><span class="material-symbols-outlined">
-                            desktop_windows
-                            </span><p class="text-xs">TV & Media</p></a>
+                          <li>
+                            <a href="#" class="flex flex-col gap-2 py-4 justify-center items-center">
+                              <span class="material-symbols-outlined">desktop_windows</span>
+                              <p class="text-xs">TV & Media</p>
+                            </a>
                           </li>
-                          <li><a href="#" class="flex flex-col gap-2 py-4 justify-center items-center"><span class="material-symbols-outlined">
-                            mode_fan
-                            </span><p class="text-xs">Purifier & Humidifier</p></a>
+                          <li>
+                            <a href="#" class="flex flex-col gap-2 py-4 justify-center items-center">
+                              <span class="material-symbols-outlined">mode_fan</span>
+                              <p class="text-xs">Purifier & Humidifier</p>
+                            </a>
                           </li>
-                          <li><a href="#" class="flex flex-col gap-2 py-4 justify-center items-center"><span class="material-symbols-outlined">
-                            camera_video
-                            </span><p class="text-xs">Kamera Keamanan</p></a>
+                          <li>
+                            <a href="#" class="flex flex-col gap-2 py-4 justify-center items-center">
+                              <span class="material-symbols-outlined">camera_video</span>
+                              <p class="text-xs">Kamera Keamanan</p>
+                            </a>
                           </li>
-                          <li><a href="#" class="flex flex-col gap-2 py-4 justify-center items-center"><span class="material-symbols-outlined">
-                            vacuum
-                            </span><p class="text-xs">Penyedot Debu</p></a>
+                          <li>
+                            <a href="#" class="flex flex-col gap-2 py-4 justify-center items-center">
+                              <span class="material-symbols-outlined">vacuum</span>
+                              <p class="text-xs">Penyedot Debu</p>
+                            </a>
                           </li>
-                          <li><a href="#" class="flex flex-col gap-2 py-4 justify-center items-center"><span class="material-symbols-outlined">
-                            microwave_gen
-                            </span><p class="text-xs">Peralatan Dapur</p></a>
-
+                          <li>
+                            <a href="#" class="flex flex-col gap-2 py-4 justify-center items-center">
+                              <span class="material-symbols-outlined">microwave_gen</span>
+                              <p class="text-xs">Peralatan Dapur</p>
+                            </a>
                           </li>
                         </ul>
-                        <div class="flex justify-center items-center"><a href="#" class="flex py-2"><p>Semua Produk</p><span class="material-symbols-outlined">
-                          chevron_right
-                          </span></a></div>
+                        <div class="flex justify-center items-center">
+                          <a href="#" class="flex py-2">
+                            <p>Semua Produk</p>
+                            <span class="material-symbols-outlined">chevron_right</span>
+                          </a>
+                        </div>
                       </div>
                   </li>
 <!-- ===== Lifestyle Nav ===== -->
                   <li>
-                    <a href="#" class="flex justify-between items-center py-2 focus:text-orange-500 lg:justify-center"><P class="font-bold">LifeStyle</P><span class="material-symbols-outlined lg:hidden">
-                      add
-                      </span></a>
+                    <a id="lifestyle-nav-a" href="#" class="flex justify-between items-center py-2 lg:justify-center">
+                      <P class="font-bold">LifeStyle</P>
+                      <span id="lifestyle-nav-symbol" class="material-symbols-outlined text-black lg:hidden">add</span>
+                    </a>
 <!-- ===== dropdown lifestyle ====== -->
-                      <div class="bg-gray-100 w-full my-2 py-2 px-6 divide-y hidden divide-gray-300 rounded-lg">
-                        <ul class="">
+                      <div id="lifestyle-nav-content" class="bg-gray-100 w-full my-2 py-2 px-6 divide-y hidden divide-gray-300 rounded-lg">
+                        <ul class="grid grid-cols-3">
                           <li>
                             <a href="#" class="flex flex-col justify-center items-center py-4">
-                              <span class="material-symbols-outlined">
-                                watch
-                                </span><p class="text-xs">Wearable</p></a>
+                              <span class="material-symbols-outlined">watch</span>
+                              <p class="text-xs">Wearable</p>
+                            </a>
                           </li>
                           <li>
                             <a href="#" class="flex flex-col justify-center items-center py-4">
-                              <span class="material-symbols-outlined">
-                            computer
-                            </span><p class="text-xs">Kantor</p></a>
+                              <span class="material-symbols-outlined">computer</span>
+                              <p class="text-xs">Kantor</p>
+                            </a>
                           </li>
                           <li>
                             <a href="#" class="flex flex-col justify-center items-center py-4">
-                              <span class="material-symbols-outlined">
-                                health_and_beauty
-                                </span><p class="text-xs">Perawatan Pribardi</p></a>
+                              <span class="material-symbols-outlined">health_and_beauty</span>
+                              <p class="text-xs">Perawatan Pribardi</p>
+                            </a>
                           </li>
                           <li>
                             <a href="#" class="flex flex-col justify-center items-center py-4">
-                              <span class="material-symbols-outlined">
-                                electrical_services
-                                </span><p class="text-xs">Aksesori</p></a>
+                              <span class="material-symbols-outlined">electrical_services</span>
+                              <p class="text-xs">Aksesori</p>
+                            </a>
                           </li>
                         </ul>
-                        <div class="flex justify-center items-center"><a href="#" class="flex py-2"><p>Semua Produk</p><span class="material-symbols-outlined">
-                          chevron_right
-                          </span></a></div>
+                        <div class="flex justify-center items-center">
+                          <a href="#" class="flex py-2">
+                            <p>Semua Produk</p>
+                            <span class="material-symbols-outlined">chevron_right</span>
+                          </a>
+                        </div>
                       </div>
                   </li>
 <!-- ===== Discover Nav ===== -->
