--- a/public/app.html
+++ b/public/app.html
@@ -62,31 +62,31 @@
                       </span></a>
                   </li>
 <!-- ===== Smartphone Nav ===== -->
-                  <li id="smartphone-nav">
+                  <li id="smartphone-nav" class="border">
                     <a id="smartphone-nav-a"  href="#" class="flex justify-between items-center py-2 lg:justify-center">
                       <P class="font-bold">Smartphone</P>
                       <span id="smartphone-nav-symbol" class="material-symbols-outlined text-black lg:hidden">add</span>
                     </a>
 <!-- ======= Dropdown Smartphone ========= -->
-                    <div id="dropdown-smartphone-nav-content" class="bg-gray-100 w-full my-2 py-2 px-6 divide-y hidden divide-gray-300 rounded-lg" >
-                      <ul class="grid grid-cols-4">
+                    <div id="dropdown-smartphone-nav-content" class="bg-gray-100 w-full my-2 py-2 px-6 divide-y hidden divide-gray-300 rounded-lg lg:absolute lg:left-0" >
+                      <ul class="grid grid-cols-4 lg:divide-x lg:grid-cols-3 lg:px-[25rem] lg:divide lg:py-8">
                         <li class="">
-                          <a href="#" class=" flex justify-center items-center py-6">
+                          <a href="#" class=" flex justify-center items-center py-6 lg:py-0">
                             <p>Redmi</p>
                           </a>
                         </li>
                         <li>
-                          <a href="#" class=" flex justify-center items-center py-6">
+                          <a href="#" class=" flex justify-center items-center py-6 lg:py-0">
                             <p>POCO</p>
                           </a>
                         </li>
                         <li>
-                          <a href="#" class=" flex justify-center items-center py-6">
+                          <a href="#" class=" flex justify-center items-center py-6 lg:py-0">
                             <p>Xiaomi</p>
                           </a>
                         </li>
                       </ul>
-                      <div class="flex justify-center items-center">
+                      <div class="flex justify-center items-center lg:hidden">
                         <a href="#" class="flex py-2">
                           <p>Semua Produk</p>
                           <span class="material-symbols-outlined">chevron_right</span></a>
