lastly at dropdown smartphone nav menu - make it responsive

--- a/public/app.html
+++ b/public/app.html
@@ -68,8 +68,8 @@
                       <span id="smartphone-nav-symbol" class="material-symbols-outlined text-black lg:hidden">add</span>
                     </a>
 <!-- ======= Dropdown Smartphone ========= -->
-                    <div id="dropdown-smartphone-nav-content" class="bg-gray-100 w-full my-2 py-2 px-6 divide-y hidden divide-gray-300 rounded-lg lg:absolute lg:left-0" >
-                      <ul class="grid grid-cols-4 lg:divide-x lg:grid-cols-3 lg:px-[25rem] lg:divide lg:py-8">
+                    <div id="dropdown-smartphone-nav-content" class="bg-gray-100 w-full my-2 py-2 px-6 divide-y hidden divide-gray-300 rounded-lg lg:absolute lg:left-0 lg:py-0 lg:flex lg:justify-center" >
+                      <ul class="grid grid-cols-4 lg:divide-x lg:grid-cols-3 lg:w-[55%] lg:margin-auto lg:divide lg:py-8">
                         <li class="">
                           <a href="#" class=" flex justify-center items-center py-6 lg:py-0">
                             <p>Redmi</p>
