make a responsive smartphone nav on XL media - uncleared

--- a/public/app.html
+++ b/public/app.html
@@ -10,8 +10,8 @@
 <body>
   <div id="root">
     <!-- ========== Header ========== -->
-    <header class="">
-      <nav class="flex gap-4 justify-between items-center px-6 py-4 relative  lg:py-2  lg:px-8 lg:justify-normal xl:w-[80%] xl:m-auto">
+    <header class="w-full">
+      <nav class="flex gap-4 justify-between items-center px-6 py-4 relative  lg:py-2  lg:px-8 lg:justify-normal xl:h-full">
         <div id="logo"><img class="h-7 min-w-min rounded-lg" src="../assets/img/xiaomi-logo.jpg" alt=""></div>
 
         <div id="side-bar-nav-wrapper" class="flex lg:order-3">
@@ -62,13 +62,13 @@
                       </span></a>
                   </li>
 <!-- ===== Smartphone Nav ===== -->
-                  <li id="smartphone-nav" class="border">
+                  <li id="smartphone-nav" class="">
                     <a id="smartphone-nav-a"  href="#" class="flex justify-between items-center py-2 lg:justify-center">
                       <P class="font-bold">Smartphone</P>
                       <span id="smartphone-nav-symbol" class="material-symbols-outlined text-black lg:hidden">add</span>
                     </a>
 <!-- ======= Dropdown Smartphone ========= -->
-                    <div id="dropdown-smartphone-nav-content" class="bg-gray-100 w-full my-2 py-2 px-6 divide-y hidden divide-gray-300 rounded-lg lg:absolute lg:left-0 lg:py-0 lg:flex lg:justify-center" >
+                    <div id="dropdown-smartphone-nav-content" class="bg-gray-100 w-full my-2 py-2 px-6 divide-y hidden divide-gray-300 rounded-lg lg:absolute lg:left-0 lg:py-0 lg:flex lg:justify-center lg:w-full" >
                       <ul class="grid grid-cols-4 lg:divide-x lg:grid-cols-3 lg:w-[55%] lg:margin-auto lg:divide lg:py-8">
                         <li class="">
                           <a href="#" class=" flex justify-center items-center py-6 lg:py-0">
